# TranslitTextToEng

./: CMakeLists.txt
files/: GetMyDocumentsPathClass.cpp  GetMyDocumentsPathClass.h  TextFromClipboardClass.cpp  TextFromClipboardClass.h  TranslitClass.cpp  TranslitClass.h  Utf16ToUtf8_Class.cpp  Utf16ToUtf8_Class.h  Utf8ToUtf16_Class.cpp  Utf8ToUtf16_Class.h  WriteClipboardClass.cpp  WriteClipboardClass.h  main.cpp
